--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "openai": "^4.20.1",
     "postcss": "^8.4.31",
     "react-router-dom": "^6.16.0",
     "tailwindcss": "^3.3.3",
