--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "dotenv": "^16.3.1",
     "firebase": "^10.5.0",
     "firebase-tools": "^12.7.0",
     "global": "^4.4.0",
